--- a/work/planAhead/game/game.runs/impl_1/.constrs/io_shield.ucf
+++ b/work/planAhead/game/game.runs/impl_1/.constrs/io_shield.ucf
@@ -40,11 +40,11 @@ NET "io_led[18]" LOC = P17;
 NET "io_led[18]" IOSTANDARD = LVTTL;
 NET "io_led[19]" LOC = P21;
 NET "io_led[19]" IOSTANDARD = LVTTL;
-NET "io_led[20]" LOC = P22;
+NET "io_led<20>" LOC = P22 | IOSTANDARD = LVTTL;
 NET "io_led[20]" IOSTANDARD = LVTTL;
 NET "io_led[21]" LOC = P23;
 NET "io_led[21]" IOSTANDARD = LVTTL;
-NET "io_led[22]" LOC = P24;
+NET "io_led<22>" LOC = P24 | IOSTANDARD = LVTTL;
 NET "io_led[22]" IOSTANDARD = LVTTL;
 NET "io_led[23]" LOC = P26;
 NET "io_led[23]" IOSTANDARD = LVTTL;
