--- a/work/planAhead/game/game.runs/impl_1/mojo_top_0.ucf
+++ b/work/planAhead/game/game.runs/impl_1/mojo_top_0.ucf
@@ -5,6 +5,27 @@
 
 
 ####################################################################################
+# Constraints from file : 'led.ucf'
+####################################################################################
+
+NET "outled1" LOC = P51;
+NET "outled1" IOSTANDARD = LVTTL;
+NET "outled2" LOC = P41;
+NET "outled2" IOSTANDARD = LVTTL;
+NET "outled3" LOC = P35;
+NET "outled3" IOSTANDARD = LVTTL;
+NET "outled4" LOC = P33;
+NET "outled4" IOSTANDARD = LVTTL;
+NET "outled5" LOC = P30;
+NET "outled5" IOSTANDARD = LVTTL;
+NET "outled6" LOC = P27;
+NET "outled6" IOSTANDARD = LVTTL;
+NET "outled7" LOC = P24;
+NET "outled7" IOSTANDARD = LVTTL;
+NET "outled8" LOC = P22;
+NET "outled8" IOSTANDARD = LVTTL;
+
+####################################################################################
 # Constraints from file : 'io_shield.ucf'
 ####################################################################################
 
@@ -50,11 +71,9 @@ NET "io_led[18]" LOC = P17;
 NET "io_led[18]" IOSTANDARD = LVTTL;
 NET "io_led[19]" LOC = P21;
 NET "io_led[19]" IOSTANDARD = LVTTL;
-NET "io_led[20]" LOC = P22;
 NET "io_led[20]" IOSTANDARD = LVTTL;
 NET "io_led[21]" LOC = P23;
 NET "io_led[21]" IOSTANDARD = LVTTL;
-NET "io_led[22]" LOC = P24;
 NET "io_led[22]" IOSTANDARD = LVTTL;
 NET "io_led[23]" LOC = P26;
 NET "io_led[23]" IOSTANDARD = LVTTL;
