--- a/work/planAhead/game/game.runs/impl_1/mojo_top_0.ucf
+++ b/work/planAhead/game/game.runs/impl_1/mojo_top_0.ucf
@@ -26,6 +26,20 @@ NET "outled8" LOC = P22;
 NET "outled8" IOSTANDARD = LVTTL;
 
 ####################################################################################
+# Constraints from file : 'buttons.ucf'
+####################################################################################
+
+NET "button_1" LOC = P17;
+NET "button_1" IOSTANDARD = LVTTL;
+NET "button_1" PULLDOWN;
+NET "button_4" LOC = P15;
+NET "button_4" IOSTANDARD = LVTTL;
+NET "button_4" PULLDOWN;
+NET "button_3" LOC = P12;
+NET "button_3" IOSTANDARD = LVTTL;
+NET "button_3" PULLDOWN;
+
+####################################################################################
 # Constraints from file : 'io_shield.ucf'
 ####################################################################################
 
@@ -63,11 +77,9 @@ NET "io_led[14]" IOSTANDARD = LVTTL;
 NET "io_led[15]" LOC = P14;
 NET "io_led[15]" IOSTANDARD = LVTTL;
 
-NET "io_led[16]" LOC = P15;
 NET "io_led[16]" IOSTANDARD = LVTTL;
 NET "io_led[17]" LOC = P16;
 NET "io_led[17]" IOSTANDARD = LVTTL;
-NET "io_led[18]" LOC = P17;
 NET "io_led[18]" IOSTANDARD = LVTTL;
 NET "io_led[19]" LOC = P21;
 NET "io_led[19]" IOSTANDARD = LVTTL;
@@ -101,7 +113,6 @@ NET "io_sel[1]" LOC = P10;
 NET "io_sel[1]" IOSTANDARD = LVTTL;
 NET "io_sel[2]" LOC = P7;
 NET "io_sel[2]" IOSTANDARD = LVTTL;
-NET "io_sel[3]" LOC = P12;
 NET "io_sel[3]" IOSTANDARD = LVTTL;
 
 # PULLDOWN is needed to prevent floating inputs
